--- a/leighfisher_app/templates/index.html
+++ b/leighfisher_app/templates/index.html
@@ -62,7 +62,7 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <!-- <section id="about" class="about">
       <div class="container">
 
         <div class="row content">
@@ -92,7 +92,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients section-bg">
+    <!-- <section id="clients" class="clients section-bg">
       <div class="container">
 
         <div class="row">
@@ -124,7 +124,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section><!-- End Clients Section --> 
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
